@@ -1,0 +1,7 @@
+Bundle-Name: org-springframework-osgi-iandt-proxy-destruction
+Bundle-SymbolicName: org.springframework.osgi.iandt.proxy.destruction
+Bundle-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-ClassPath: .
+Import-Package: org.springframework.osgi.iandt.simpleservice
+Export-Package: org.springframework.osgi.iandt.reference.proxy
